# okx_pump_search

./: .env.dist  .gitignore  api_client.py  candles_manager.py  config.ini  main.py  market_service.py  pump_scanner.py  pyproject.toml  settings.py  signals.py  test.py  tg_manager.py  trading.py
okx_api/: api_client.py  request_client.py
trading/: correction_hunter.py  indicators.py  strategy.py  trading_manager.py
